rewriting a large part of the code for greater convenience, completely changing the backend

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
     content="MogCraft - сервер для настоящих сигм. Ванильное выживание, адекватная и отзывчивая администрация - и только.">
+    <noscript>Чтобы пользоваться mogcraft.ru включите JavaScript</noscript>
   <title>MogCraft | Майнкрафт сервер</title>
 </head>
 
