--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta
+            name="description"
+            content="MogCraft - сервер для настоящих сигм. Ванильное выживание, адекватная и отзывчивая администрация - и только."
+        />
+        <noscript>Чтобы пользоваться mogcraft.ru включите JavaScript</noscript>
+        <title>MogCraft</title>
+    </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description"
-    content="MogCraft - сервер для настоящих сигм. Ванильное выживание, адекватная и отзывчивая администрация - и только.">
-    <noscript>Чтобы пользоваться mogcraft.ru включите JavaScript</noscript>
-  <title>MogCraft | Майнкрафт сервер</title>
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
